Bug 1769431 - Ensure to release SwapChain surface handle r=gfx-reviewers,lsalzman

There is a case that SwapChain surface handle is not closed. It should be closed correctly. It caused the problem on NVIDIA gpu.

Differential Revision: https://phabricator.services.mozilla.com/D158236